// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allowElevation false, app requestedExecutionLevel admin 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "test Setup 1.1.0.exe",
      "safeArtifactName": "test-setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`allowToChangeInstallationDirectory 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "test-custom-inst-dir-setup-1.1.0.exe",
        "path": "Test Custom Installation Dir Setup 1.1.0.exe",
        "releaseNotes": "New release with new bugs and

without features",
        "url": "Test Custom Installation Dir Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test Custom Installation Dir Setup 1.1.0.exe",
      "safeArtifactName": "test-custom-inst-dir-setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`allowToChangeInstallationDirectory 2`] = `
Object {
  "owner": "foo",
  "provider": "github",
  "repo": "bar",
}
`;

exports[`allowToChangeInstallationDirectory 3`] = `
Object {
  "githubArtifactName": "test-custom-inst-dir-setup-1.1.0.exe",
  "path": "Test Custom Installation Dir Setup 1.1.0.exe",
  "releaseNotes": "New release with new bugs and

without features",
  "url": "Test Custom Installation Dir Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`assisted 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`assisted, MUI_HEADER 1`] = `
Object {
  "win": Array [],
}
`;

exports[`assisted, MUI_HEADER as option 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`assisted, only perMachine 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;
